Fix contrast violation.
These were making it past the accessibility audits because they weren't
considering the opacity when determining the colors.

--- a/src/styles/post-template.less
+++ b/src/styles/post-template.less
@@ -146,11 +146,12 @@ body {
     }
 
     .section-heading {
-        font-size: 14px;
-        font-weight: 400;
-        opacity: 0.5;
-        text-transform: lowercase;
+        color: #dbdcde;
+        font-size: 12px;
+        font-weight: 300;
+        letter-spacing: 0.5px;
         margin-top: 40px;
+        text-transform: lowercase;
     }
 
     .post-blurb {
